src/objects/CQ_Wkl_Pipeline_Snapshot_by_RR_vs_Anchor__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group_Owner_Team__c</fullName>
        <label>Group^Owner Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Records__c</fullName>
        <label>Number of Records</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Team_Group_Buckets__c</fullName>
        <formula>LEFT(Group_Owner_Team__c, FIND( &quot;^&quot;,Group_Owner_Team__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team (Group Buckets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>RIGHT(Group_Owner_Team__c, LEN(Group_Owner_Team__c)- FIND( &quot;^&quot;,Group_Owner_Team__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Rate_Yes_No_250K__c</fullName>
        <label>Run-Rate (Yes / No) 250K</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighted_Forecast__c</fullName>
        <label>Weighted Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CQ Wkl Pipeline Snapshot by RR vs Anchor</label>
    <nameField>
        <label>CQ Wkl Pipeline Snapshot by RR vs Anchor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CQ Wkl Pipeline Snapshot by RR vs Anchor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>